--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,1 +1,41 @@
-teste
+.collapsible {
+  background-color: #a8eba7;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+.collapsible:hover {
+  background-color: #99ceff;
+}
+
+.collapsible::before {
+  content: "\02795";
+  font-size: 13px;
+  position: relative;
+  margin-right: 10px;
+}
+
+.active::before {
+  content: "\02796";
+}
+
+.content {
+  padding-left: 20px;
+  display: none;
+}
+
+/* Estilização dos níveis */
+.level-2 {
+  padding-left: 40px;
+}
+
+.level-3 {
+  padding-left: 60px;
+}
